--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <header class="navbar navbar-fixed-top" id="top" style="background: none;">
+    <header class="navbar navbar-fixed-top" id="top" style="background: rgba(0, 0, 0, 0.614);">
         <div class="container">
             <div class="row">
                
