--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="col-md-6 online_request_block">
                 <form class="online_request formRequest" action="/wp-admin/admin-ajax.php" method="post" name="myform"
-                    autocomplete=""> <span>Он-лайн заявка</span>
+                    autocomplete=""> <span>Оставить заявку</span>
                     <h6 class="reuqest_title">Оставьте свою заявку он-лайн и получите до 10% скидки</h6>
                     <div class="form_elems"> <input type="text" name="fullname" placeholder="Ваше имя"
                             class="input_reuqest fullname" autocomplete="off" required=""> <input type="tel"
