--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        Submit
+                        Отправить
                       </a>
                     </form>
-                    <p>Don't have an account? <a href="" class="a2">Sign up!</a></p>
+                  
                   </div>
 
             </div>
