--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container greeting">
         <div class="row">
             <div class="col-md-6">
-                <h1>Cоздай сайт для своего бизнеса.</small>
+                <h1 id="h1_head">Cоздай сайт для своего бизнеса. </small>
             </div>
             <div class="col-md-6 online_request_block">
                 <div class="login-box">
@@ -77,7 +77,6 @@
                         Отправить
                       </a>
                     </form>
-                  
                   </div>
 
             </div>
