--- a/index.html
+++ b/index.html
@@ -53,8 +53,29 @@
     <div class="container greeting">
         <div class="row">
             <div class="col-md-6">
-                <h1 id="h1_head">Cоздай сайт для своего бизнеса. </small>
+                <h1 id="h1_head">Cоздай сайт для своего <br> бизнеса. </small>
+                </h1>
             </div>
+
+
+            <style>
+                #h1_head {
+                    
+                    white-space: nowrap; /* Не переносить текст на новую строку */
+                    position: absolute;
+                    left: -100%; /* Начальная позиция текста вне видимой области */
+                    animation: slideIn 3s forwards; /* Анимация текста */
+                }
+        
+                @keyframes slideIn {
+                    from {
+                        left: -100%;
+                    }
+                    to {
+                        left: 0;
+                    }
+                }
+            </style>
             <div class="col-md-6 online_request_block">
                 <div class="login-box">
                     <p>ОСТАВИТЬ ЗАЯВКУ</p>
