--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               
             </style>
             <div class="col-md-6 online_request_block">
-                <div class="login-box">
+                <div class="login-box1">
                     <p>ОСТАВИТЬ ЗАЯВКУ</p>
 
                     <p class="p2">Оставьте свою заявку он-лайн и получите до <a href="#">10%</a> скидки</p>
