--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                             <li> <a href="">Услуги</a></li>
                             <li> <a href="">Плюсы</a></li>
                             <li> <a href="">Цены на сайты</a></li>
+                            <li> <a href="#adres">Наш адрес</a></li>
 
                             <li> <a href="#contacts">Контакты</a></li>
                         </ul>
@@ -1074,8 +1075,8 @@
 
         <div>
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d698.8171332557408!2d66.92281639292945!3d39.649859864691855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2s!4v1722717960736!5m2!1sru!2s"
-                width="80%" height="550" style="border:0;" allowfullscreen="" loading="lazy"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1535.9954443927154!2d66.9220809567061!3d39.649919592863725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f4d1946b7c9d821%3A0x648783003ba57810!2z0KHQsNC80LDRgNC60LDQvdC0LCDQodCw0LzQsNGA0LrQsNC90LTRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwg0KPQt9Cx0LXQutC40YHRgtCw0L0!5e0!3m2!1sru!2s!4v1722718428059!5m2!1sru!2s"
+                width="90%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
