--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
                 <div class="col-md-9 menu">
                     <nav class="collapse navbar-collapse" id="navbar">
                         <ul class="nav navbar-nav">
-                            <li> <a href="">Услуги</a></li>
-                            <li> <a href="">Плюсы</a></li>
-                            <li> <a href="">Цены на сайты</a></li>
+                            <li> <a href="#services">Услуги</a></li>
+                            <li> <a href="#benefits">Плюсы</a></li>
                             <li> <a href="#adres">Наш адрес</a></li>
 
                             <li> <a href="#contacts">Контакты</a></li>
