--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                     <p class="dark">Занимаемся разработкой сайтов и продвижением в
                         соцсетях. Также наши услуги включают техподдержку и модернизацию существующих сайтов.</p>
                 </div>
+
+
+                <div class="all-divs">
                 <div class="col-md-3 col-sm-6">
                     <div class="service"> <svg xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="71" x="0px" y="0px"
@@ -185,6 +188,8 @@
                                 </g>
                             </g>
                         </svg>
+
+                        
                         <h2 class="dark"> Разработка сайтов</h2>
                         <p> Создание продающих сайтов для вашего бизнеса. От сайта-визитки до онлайн-магазина.</p> <a
                             href="#" class="proposal-button modalRequestBtn" data-tarif="Разработка сайтов"> Узнать
@@ -262,7 +267,6 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="service"> <svg xmlns="http://www.w3.org/2000/svg"
@@ -286,6 +290,8 @@
             </div>
         </div>
     </div>
+
+
     <div id="benefits">
         <div class="container">
             <div class="row">
