--- a/index.html
+++ b/index.html
@@ -1508,6 +1508,71 @@
     </div>
     <div>
 
+
+
+
+        <div class="zayafka">
+            <div data-admin-theme="black" class="zayafka2">
+                <strong class="skidka"> -40% </strong>
+                <span class="timer" data-type="timer">06:42:41</span>
+            </div>
+            <button class="btn_ostavit" type="button" data-gtm="lead" data-pixel="msCavChr"
+                data-action-button="order-modal">
+                <span class="text"> Оставить заявку </span>
+            </button>
+        </div>
+
+        <style>
+            .zayafka {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                background-color: rgba(0, 0, 0, 0.717);
+                z-index: 1000;
+                box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+                width: 100%;
+                align-items: center;
+                text-align: center;
+                justify-content: center;
+                border-radius: 10px;
+            }
+
+            .zayafka .zayafka2 {
+                border-radius: 10px;
+                padding: 5px 100px;
+            }
+
+            .zayafka .skidka {
+                background-color: yellow;
+                padding: 5px 5px;
+                border-radius: 12px;
+                display: flex;
+                flex-direction: column;
+
+            }
+
+            .zayafka .btn_ostavit {
+                width: 90%;
+                margin-bottom: 5px;
+                background-color: #aaaa76;
+                border: none;
+                border-radius: 20px;
+                padding: 10px 10px;
+            }
+
+            .zayafka .btn_ostavit .text {
+                font-size: 20px;
+                color: white;
+            }
+
+            .zayafka .timer {
+                color: red;
+                font-size: 12px;
+            }
+        </style>
+
+
+
         <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 
         <script src="./script.js"></script>
