--- a/index.html
+++ b/index.html
@@ -1522,6 +1522,8 @@
             </button>
         </div>
 
+        
+
         <style>
             .zayafka {
                 position: fixed;
@@ -1554,7 +1556,7 @@
             .zayafka .btn_ostavit {
                 width: 90%;
                 margin-bottom: 5px;
-                background-color: #aaaa76;
+                background-color: #3d3bff;;
                 border: none;
                 border-radius: 20px;
                 padding: 10px 10px;
