--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Создание сайтов - заказать сайт под ключ</title>
 
+    <link rel="stylesheet"
+        href="https://cdn.skillbox.pro/wbd-front/landgen/f9eed73c3ecfc0c3220394cf3ce48113a14d5fca/css/geography-v1.min.css"
+        as="style" onload="this.onload=null;this.rel='stylesheet'" media="all">
+    <link rel="stylesheet"
+        href="https://cdn.skillbox.pro/wbd-front/landgen/f9eed73c3ecfc0c3220394cf3ce48113a14d5fca/css/geography-v1.min.css">
+
+
+    <script
+        src="https://cdn.skillbox.pro/wbd-front/landgen/f9eed73c3ecfc0c3220394cf3ce48113a14d5fca/js/geography-v1.min.js"
+        defer=""></script>
 
 </head>
 
@@ -1509,6 +1519,41 @@
     <div>
 
 
+        <section class="geography block block--default" data-block-name="geography" id="geography">
+            <ul class="geography__list geography__list--top"
+                style="translate: none; rotate: none; scale: none; transform: translate(0%, 0px);">
+                <li class="geography__item"> Астана </li>
+                <li class="geography__item"> Минск </li>
+                <li class="geography__item"> Баку </li>
+                <li class="geography__item"> Ташкент </li>
+                <li class="geography__item"> Кишинев </li>
+                <li class="geography__item"> Бишкек </li>
+                <li class="geography__item"> Москва </li>
+            </ul>
+            <hr>
+            <ul class="geography__list geography__list--mid"
+                style="translate: none; rotate: none; scale: none; transform: translate(0%, 0px);">
+                <li class="geography__item"> Наманган </li>
+                <li class="geography__item"> Самарканд </li>
+                <li class="geography__item"> Андижан </li>
+                <li class="geography__item"> Фергана </li>
+                <li class="geography__item"> Бухара </li>
+                <li class="geography__item"> Навои </li>
+                <li class="geography__item"> Нукус </li>
+            </ul>
+            <hr>
+            <ul class="geography__list geography__list--bottom"
+                style="translate: none; rotate: none; scale: none; transform: translate(0%, 0px);">
+                <li class="geography__item"> Алматы </li>
+                <li class="geography__item"> Шымкент </li>
+                <li class="geography__item"> Гомель </li>
+                <li class="geography__item"> Могилев </li>
+                <li class="geography__item"> Тирасполь </li>
+                <li class="geography__item"> Бельцы </li>
+                <li class="geography__item"> Ош </li>
+                <li class="geography__item"> Джалал-Абад </li>
+            </ul>
+        </section>
 
 
         <div class="zayafka">
@@ -1522,58 +1567,13 @@
             </button>
         </div>
 
+
+
+
+
+
+
         
-
-        <style>
-            .zayafka {
-                position: fixed;
-                bottom: 0;
-                left: 0;
-                background-color: rgba(0, 0, 0, 0.717);
-                z-index: 1000;
-                box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-                width: 100%;
-                align-items: center;
-                text-align: center;
-                justify-content: center;
-                border-radius: 10px;
-            }
-
-            .zayafka .zayafka2 {
-                border-radius: 10px;
-                padding: 5px 100px;
-            }
-
-            .zayafka .skidka {
-                background-color: yellow;
-                padding: 5px 5px;
-                border-radius: 12px;
-                display: flex;
-                flex-direction: column;
-
-            }
-
-            .zayafka .btn_ostavit {
-                width: 90%;
-                margin-bottom: 5px;
-                background-color: #3d3bff;;
-                border: none;
-                border-radius: 20px;
-                padding: 10px 10px;
-            }
-
-            .zayafka .btn_ostavit .text {
-                font-size: 20px;
-                color: white;
-            }
-
-            .zayafka .timer {
-                color: red;
-                font-size: 12px;
-            }
-        </style>
-
-
 
         <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 
