--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <ul class="nav navbar-nav">
                             <li> <a href="#services">Услуги</a></li>
                             <li> <a href="#benefits">Плюсы</a></li>
-                            <li> <a  href="#adres">Наш адрес</a></li>
+                            <li> <a href="#adres">Наш адрес</a></li>
 
                             <li> <a href="#contacts">Контакты</a></li>
                         </ul>
@@ -53,14 +53,14 @@
     <div class="container greeting">
         <div class="row">
             <div class="col-md-6">
-                <h1 class="headerH1" id="h1_head"><b>Cоздай сайт для своего <br> бизнеса. </b></small>
+                <h1 class="headerH1" id="h1_head"><b>Cоздай сайт для своего <br> бизнеса 
+                вместе с <br>
+                <p class="headerH2"><i>SAM SOFT LINE </i></p>
+                </b></small>
                 </h1>
             </div>
 
 
-            <style>
-
-            </style>
             <div class="col-md-6 online_request_block">
                 <div class="login-box1">
                     <p>ОСТАВИТЬ ЗАЯВКУ</p>
