--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <div class="container greeting">
         <div class="row">
             <div class="col-md-6">
-                <h1 class="headerH1" id="h1_head"><b>Cоздай сайт для своего <br> бизнеса 
-                вместе с <br>
-                <p class="headerH2"><i>SAM SOFT LINE </i></p>
-                </b></small>
+                <h1 class="headerH1" id="h1_head"><b>Cоздай сайт для своего <br> бизнеса
+                        вместе с <br>
+                        <p class="headerH2"><i>SAM SOFT LINE </i></p>
+                    </b></small>
                 </h1>
             </div>
 
@@ -1519,6 +1519,35 @@
             </button>
         </div>
 
+
+
+        <div class="pomoshnik">
+            <button><img src="./images/icons/message_icon.svg" alt=""></button>
+        </div>
+
+        <style>
+            .pomoshnik {
+                position: fixed;
+                bottom: 20px;
+                right: 20px;
+                z-index: 1000;
+            }
+
+
+            .pomoshnik button {
+                width: 90px;
+                height: 90px;
+                border: none;
+                background-color: #3d3bff;
+                border-radius: 100%;
+            }
+
+            .pomoshnik button img {
+                width: 50px;
+                height: 50px;
+                filter: invert(100%) brightness(100%);
+            }
+        </style>
 
         <div id="myModal" class="modal">
             <div class="modal-content">
