--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,6 @@
         </div>
     </div>
     <div>
-
         <div class="zayafka">
             <div data-admin-theme="black" class="zayafka2">
                 <strong class="skidka"> -40% </strong>
@@ -1522,32 +1521,111 @@
 
 
         <div class="pomoshnik">
-            <button><img src="./images/icons/message_icon.svg" alt=""></button>
+            <button id="toggleButton"><img src="./images/icons/message_icon.svg" alt=""></button>
+            <div class="pom_mes" id="infoBox">
+                <div class="p">
+                    <p class="head"><b class="p1"><i>SAM SOFT LINE</i></b> – ваш помощник</p>
+                    <img src="./images/icons/down_arrow_icon.svg" alt="">
+                </div>
+                <hr>
+                <div class="m">
+                    <p class="p1">Мы онлайн 👋</p>
+                    <p class="p2">Чем мы можем вам помочь? Задайте <br> вопрос в любом из мессенджеров.</p>
+                </div>
+            </div>
         </div>
 
         <style>
-            .pomoshnik {
-                position: fixed;
-                bottom: 20px;
-                right: 20px;
-                z-index: 1000;
-            }
+.m .p2 {
+    padding-top: 10px;
+    font-style:oblique;
+}
 
+.p .p1 {
+    font-size: 18px;
+    color: #3d3bff;
+}
 
-            .pomoshnik button {
-                width: 90px;
-                height: 90px;
-                border: none;
-                background-color: #3d3bff;
-                border-radius: 100%;
-            }
+      .pomoshnik {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-            .pomoshnik button img {
-                width: 50px;
-                height: 50px;
-                filter: invert(100%) brightness(100%);
+.pomoshnik button {
+    width: 90px;
+    height: 90px;
+    border: none;
+    background-color: #3d3bff;
+    border-radius: 100%;
+    position: relative;
+}
+
+.pomoshnik button img {
+    width: 50px;
+    height: 50px;
+    filter: invert(100%) brightness(100%);
+}
+
+.pom_mes {
+    width: 300px;
+    height: 200px;
+    display: none; 
+    position: absolute;
+    bottom: 100%; 
+    right: 0; 
+    background: #fff; 
+    border: 1px solid #ddd;
+    border-radius: 8px; /* Скругление углов, можно изменить */
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2); /* Тень, можно изменить */
+    z-index: 1001; /* Убедитесь, что элемент будет поверх кнопки */
+}
+
+.pom_mes .p {
+    display: flex;
+    white-space: nowrap;
+    height: 20px;
+    /* background-color: #3e3bff80; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pom_mes .p img {
+    cursor: pointer; 
+    width: 20px;
+}
+ </style>
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const button = document.getElementById('toggleButton');
+        const infoBox = document.getElementById('infoBox');
+        const closeButton = infoBox.querySelector('.p img'); // Кнопка для закрытия информации
+
+        button.addEventListener('click', () => {
+            // Переключение видимости блока
+            if (infoBox.style.display === 'none' || !infoBox.style.display) {
+                infoBox.style.display = 'block';
+                button.style.display = 'none'; // Скрыть кнопку
+            } else {
+                infoBox.style.display = 'none';
+                button.style.display = 'block'; // Показать кнопку
             }
-        </style>
+        });
+
+        // Закрытие блока при клике на стрелку
+        closeButton.addEventListener('click', () => {
+            infoBox.style.display = 'none';
+            button.style.display = 'block'; // Показать кнопку
+        });
+    });
+</script>
+
 
         <div id="myModal" class="modal">
             <div class="modal-content">
