--- a/index.html
+++ b/index.html
@@ -1530,7 +1530,7 @@
                 <hr>
                 <div class="m">
                     <p class="p1">Мы онлайн 👋</p>
-                    <p class="p2">Чем мы можем вам помочь? Задайте <br> вопрос.</p>
+                    <p class="p2">Чем мы можем вам помочь? Задайте <br> вопрос?</p>
 
 
                     <div>
