--- a/SAM_SOFT_LINE/index.html
+++ b/SAM_SOFT_LINE/index.html
@@ -36,11 +36,13 @@
                 <div class="col-md-9 menu">
                     <nav class="collapse navbar-collapse" id="navbar">
                         <ul class="nav navbar-nav">
-                            <li> <a href="#services">Услуги</a></li>
-                            <li> <a href="#benefits">Плюсы</a></li>
-                            <li> <a href="#adres">Наш адрес</a></li>
-
-                            <li> <a href="#contacts">Контакты</a></li>
+                            <li class="nav-item logo-item">
+                                <img class="head_img" src="./images/icons/samSOftline-logo.png" alt="SamSoftline Logo">
+                            </li>
+                            <li class="nav-item"><a href="#services">Услуги</a></li>
+                            <li class="nav-item"><a href="#benefits">Плюсы</a></li>
+                            <li class="nav-item"><a href="#adres">Наш адрес</a></li>
+                            <li class="nav-item"><a href="#contacts">Контакты</a></li>
                         </ul>
                         <div class="navbar-right ">
                             <p class="navbar-text hidden-sm hidden-xs">+998 (90) 505 90 05</p>
@@ -55,7 +57,10 @@
             <div class="col-md-6">
                 <h1 class="headerH1" id="h1_head"><b>Cоздай сайт для своего <br> бизнеса
                         вместе с <br>
+                        <div class="logo_div">
                         <p class="headerH2"><i>SAM SOFT LINE </i></p>
+                    <img src="./images/icons/samSOftline-logo.png" alt="">
+                    </div>
                     </b></small>
                 </h1>
             </div>
@@ -1524,8 +1529,11 @@
             <button id="toggleButton"><img src="./images/icons/message_icon.svg" alt=""></button>
             <div class="pom_mes" id="infoBox">
                 <div class="p">
-                    <p class="head"><b class="p1"><i>SAM SOFT LINE</i></b> – ваш помощник</p>
-                    <img src="./images/icons/down_arrow_icon.svg" alt="">
+                    <img class="head_img2" src="./images/icons/samSOftline-logo.png" alt="SamSoftline Logo">
+                    <p class="head">
+                        <b class="p1"><i>SAM SOFT LINE</i></b> – ваш помощник
+                    </p>
+                    <img class="down_arrow_icon" src="./images/icons/down_arrow_icon.svg" alt="Down Arrow Icon">
                 </div>
                 <hr>
                 <div class="m">
