--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         вместе с <br>
                         <div class="logo_div">
                         <p class="headerH2"><i>SAM SOFT LINE </i></p>
-                    <img src="./images/icons/samSOftline-logo.png" alt="">
+                    <img id="logo_header" src="./images/icons/samSOftline-logo.png" alt="">
                     </div>
                     </b></small>
                 </h1>
