--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <nav class="collapse navbar-collapse" id="navbar">
                         <ul class="nav navbar-nav">
                             <li class="nav-item logo-item">
-                                <img class="head_img" src="./images/icons/samSOftline-logo.png" alt="SamSoftline Logo">
+                               <a href="#slider"> <img class="head_img" src="./images/icons/samSOftline-logo.png" alt="SamSoftline Logo"></a>
                             </li>
                             <li class="nav-item"><a href="#services">Услуги</a></li>
                             <li class="nav-item"><a href="#benefits">Плюсы</a></li>
