--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                                 <li class="nav-item"><a href="#contacts">Контакты</a></li>
                             </ul>
                         </ul>
-                        <div class="navbar-right ">
+                        <!-- <div class="navbar-right ">
                             <p class="navbar-text hidden-sm hidden-xs">+998 (90) 505 90 05</p>
-                        </div>
+                        </div> -->
                     </nav>
                 </div>
             </div>
