--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@ document.getElementById('burgerMenu').addEventListener('click', function() {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 10px;
+        top: 0;
         left: 0;
         padding-left: 20px;
         height: 600px;
-        background: rgba(0, 0, 0, 0.811);
+        background: rgba(79, 79, 79, 0.811);
         width: 150px;
         box-shadow: 0 8px 16px rgba(0,0,0,0.3);
     }
@@ -121,7 +121,7 @@ document.getElementById('burgerMenu').addEventListener('click', function() {
 
     .burger-menu.active + .nav-links {
         display: flex;
-        justify-content: space-between;;
+       
     }
 
     .nav-links li {
