--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ document.getElementById('burgerMenu').addEventListener('click', function() {
 
     .burger-menu.active + .nav-links {
         display: flex;
+        padding-top: 30px;
        
     }
 
