--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
 
                             <h2 class="dark"> Разработка сайтов</h2>
                             <p> Создание продающих сайтов для вашего бизнеса. От сайта-визитки до онлайн-магазина.</p>
-                            <a href="#" class="proposal-button modalRequestBtn" data-tarif="Разработка сайтов"> Узнать
-                                больше </a>
+                            <!-- <a href="#" class="proposal-button modalRequestBtn" data-tarif="Разработка сайтов"> Узнать
+                                больше </a> -->
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -279,9 +279,10 @@
                             </svg>
                             <h2 class="dark"> Модернизация старого</h2>
                             <p> Вам нравится ваш нынешний сайт, но вы хотите сделать его адаптивным или добавить новый
-                                функционал - не проблема! Позвоните нам!</p> <a href="#"
+                                функционал - не проблема! Позвоните нам!</p> 
+                                <!-- <a href="#"
                                 class="proposal-button modalRequestBtn" data-tarif="Модернизация старого"> Узнать больше
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -300,8 +301,9 @@
                         </svg>
                         <h2 class="dark"> Техподдержка</h2>
                         <p> Заказав сайт у нас, Вы получаете 1 год бесплатной техподдержки. А также, мы предоставляем
-                            услуги по поддержке сторонних сайтов.</p> <a href="#"
-                            class="proposal-button modalRequestBtn" data-tarif="Техподдержка"> Узнать больше </a>
+                            услуги по поддержке сторонних сайтов.</p>
+                             <!-- <a href="#"
+                            class="proposal-button modalRequestBtn" data-tarif="Техподдержка"> Узнать больше </a> -->
                     </div>
                 </div>
             </div>
