--- a/index.html
+++ b/index.html
@@ -1554,7 +1554,7 @@
 
 
                     <div>
-                        <a href="https://t.me/southpaw9005">
+                        <a target="_blank" href="https://t.me/southpaw9005" >
                             <img src="./images/icons/telegram_message_icon.svg" alt="">
                             <p> TELEGRAM</p>
                         </a>
