--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                         </div>
                         <div class="user-box">
-                            <input required="" name="" type="number" placeholder="Номер телефона">
+                            <input required="" name="" type="tel" placeholder="+998 91 123 45 67">
 
                         </div>
                         <a href="#">
@@ -1576,7 +1576,7 @@
                     <form>
                         <div class="inputs">
                             <input required="" name="" type="text" placeholder="Ваше имя">
-                            <input required="" name="" type="number" placeholder="Номер телефона">
+                            <input required="" name="" type="tel" placeholder="+998 91 123 45 67">
                         </div>
 
                         <button class="btn_otpravit">
