--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
                             </svg>
                             <h2 class="dark"> Модернизация старого</h2>
                             <p> Вам нравится ваш нынешний сайт, но вы хотите сделать его адаптивным или добавить новый
-                                функционал - не проблема! Позвоните нам!</p> 
-                                    <a href="#"
-                                    class="proposal-button modalRequestBtn" data-tarif="Модернизация старого"> Узнать больше
-                                </a>
+                                функционал - не проблема! Позвоните нам!</p>
+                            <a href="#" class="proposal-button modalRequestBtn" data-tarif="Модернизация старого">
+                                Узнать больше
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -302,15 +302,13 @@
                         <h2 class="dark"> Техподдержка</h2>
                         <p> Заказав сайт у нас, Вы получаете 1 год бесплатной техподдержки. А также, мы предоставляем
                             услуги по поддержке сторонних сайтов.</p>
-                             <a href="#"
-                            class="proposal-button modalRequestBtn" data-tarif="Техподдержка"> Узнать больше </a>
+                        <a href="#" class="proposal-button modalRequestBtn" data-tarif="Техподдержка"> Узнать больше
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
 
     <div id="benefits">
         <div class="container">
@@ -999,7 +997,6 @@
         </div>
     </div>
 
-
     <div id="statistics">
         <div class="container">
             <div class="row">
@@ -1099,7 +1096,6 @@
 
     <div id="adres">
         <p class="adr_h1">Наш адрес</p>
-
         <div>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1535.9954443927154!2d66.9220809567061!3d39.649919592863725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f4d1946b7c9d821%3A0x648783003ba57810!2z0KHQsNC80LDRgNC60LDQvdC0LCDQodCw0LzQsNGA0LrQsNC90LTRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwg0KPQt9Cx0LXQutC40YHRgtCw0L0!5e0!3m2!1sru!2s!4v1722718428059!5m2!1sru!2s"
@@ -1554,7 +1550,7 @@
 
 
                     <div>
-                        <a target="_blank" href="https://t.me/southpaw9005" >
+                        <a target="_blank" href="https://t.me/southpaw9005">
                             <img src="./images/icons/telegram_message_icon.svg" alt="">
                             <p> TELEGRAM</p>
                         </a>
