--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="telephone=no" name="format-detection">
+    <link rel="icon" sizes="32x32" href="./images/photo_2024-08-08_20-13-27.jpg">
 
 
     <link rel="stylesheet" href="./css/style.css">
     <title>Создание сайтов - заказать сайт под ключ</title>
-
-
 </head>
 
 
