--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="telephone=no" name="format-detection">
     <link rel="icon" sizes="32x32" href="./images/photo_2024-08-08_20-13-27.jpg">
+    <meta property="og:description" content="Cоздайте сайт для своего бизнеса вместе с SAM SOFT LINE">
 
 
     <link rel="stylesheet" href="./css/style.css">
